# pomodoro_tarefas

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  extensions.py
app/config/: config.py
app/models/: __init__.py  activity.py  category.py  history.py  schedule.py  user.py
app/routes/: activities.py  api.py  auth.py  categories.py  main_routes.py
app/services/: auth.py
instance/: pomodoro.db
migrations/versions/: 01d8f6836384_ajustador_campos_para_monitorar_as_.py  98c29934fa34_initial_models.py  c84029761e68_criado_tabelas_novamente.py
pomodoro-personalizado/: README.md  angular.json  package-lock.json  package.json
pomodoro-personalizado/src/: index.html  main.ts  styles.scss
pomodoro-personalizado/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
pomodoro-personalizado/src/app/auth/: auth.guard.ts  auth.service.ts
pomodoro-personalizado/src/app/auth/login/: login.component.html  login.component.scss  login.component.ts
pomodoro-personalizado/src/app/dashboard/: dashboard.component.ts
