[tool.poetry]
name = "pomodoro-tarefas"
version = "0.1.0"
description = "Backend para aplicativo Pomodoro Personalizado"
authors = ["Alisson Oliveira <alisson@coopervap.com.br>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
python-dotenv = "^1.1.0"
flask-cors = "^5.0.1"
python-dateutil = "^2.9.0.post0"
flask-jwt-extended = "^4.7.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
